# CM4Xutils

./: .gitignore  CM4X_d2_grid_errors.ipynb  CM4Xutils_api_example.ipynb  CM4Xutils_wmt_example.ipynb  README.md  coarsening.ipynb  environment.yml  pyproject.toml  save_sigma2_coords.py
CM4Xutils/: __init__.py  coarsen.py  grid_preprocess.py  loading.py  transform.py
CM4utils/: grid_preprocess.py  loading.py
data/: sigma2_coords.nc
examples/: coarsen_budget_diags.ipynb  coarsen_tracers.ipynb  doralite_examples.ipynb  fix_coarsening.ipynb  generate_examples_sigma2budgets_wmb.ipynb  generate_examples_vint_zlevels.ipynb  loading_api_dora.ipynb  process_for_ESS116.ipynb  save_tracers_nativegrid.ipynb  search_variables.ipynb  test_coarsen_ssh.ipynb  test_coarsened_mass_budget.ipynb  test_coarsening.ipynb  test_vertical_transform.ipynb  test_wmb.ipynb  testing.ipynb  testing_consistency_of_ocean_depth.ipynb  what_is_this.ipynb  wmb_from_dora.ipynb  wmb_from_zarr.ipynb  wmb_from_zarr_old.ipynb  wmb_from_zarr_test_Meza.ipynb  wmb_ocim_compare.ipynb  wmb_ocim_compare_constants.ipynb
scripts/: coarsen_sigma2_budgets.py  coarsen_sigma2_tracer.py  coarsen_sigma2_tracers.py  copy_CM4Xp125.py  copy_to_collab.py  remap_functions.py  save_sigma2_coords.py
